syntax = "proto3";

package db.item;

message ItemNumber {
  string value = 1;
}
